# CorsoPythonAvanzato

./: .gitignore  README.md  pyproject.toml  setup.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
Utils/: sanitization.py
corso_python_avanzato.egg-info/: PKG-INFO  SOURCES.txt
esercizi/Alberto_Bertelli/Esercitazione_flask_finale/: Dockerfile  app.py  docker-compose.yml  requirements.txt
esercizi/Alberto_Bertelli/Esercizi_tkinter/: esempio1.py  esempio2.py  esercizio10.py  esercizio11.py  esercizio3.py  esercizio4.py  esercizio5.py  esercizio6.py  esercizio7.py  esercizio8.py  esercizio9.py  stopwatch.py
esercizi/Alberto_Bertelli/Esercizio_1/: app.py
esercizi/Alberto_Bertelli/Esercizio_BluPrint/: app.py
esercizi/Alberto_Bertelli/Esercizio_pandas/: Esempi.py  esercizio2.py  esercizio_pandas.py  vendite_negozio.csv
esercizi/Alberto_Bertelli/esercizio-bearer-taskmanager/: app.py
esercizi/Alberto_Bertelli/esercizio-finale/: app.py
esercizi/Alberto_Bertelli/esercizio_2/: app.py
esercizi/Elisa_Genesio/: app.py
esercizi/app/: __init__.py  db_schema.sql  user.py
esercizi/esercizio-bearer-taskmanager/: app.py
esercizi/flask-01/: app.py
materiale/: Flask_Recipe_App_Assignment.md  esercizi.md  flask_authn_authz_tutorial.ipynb  github-introduction.md  os-module-introduction.md
materiale/Consegne_esercizi_altro/: Esercizio_os_open_json.md
materiale/Consegne_esercizi_flask/: Consegna_Esercizio_Flask_Scuola.md  Esercizio_Flask_Guestbook_Pro.md
materiale/pandas/: esercizio_pandas_vendite.md  pandas_intro.md
tests/: test_sanitization.py
(+221 files in other folders)
